<resources>
    <string name="app_name">One</string>
    <string name="done">DONE</string>
    <string name="submit">SUBMIT</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="continue_label">Continue</string>
    <string name="alert">Alert</string>
    <string name="true_">True</string>
    <string name="false_">False</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="created_by">Created By</string>
    <string name="name">Name</string>
    <string name="action_questions_feedback">Questions/Feedback</string>
    <string name="message_questions_feedback">You can share you questions/feedback via our Google Play Store page. Would you like to do this?</string>
    <string name="talk_by_typing">Talk by typing</string>
    <string name="swipe_left_action">Tap button or swipe left\nTo start learning typing\n*------------------------|</string>
    <string name="tap_here_to_start_activity">TAP HERE TO START ACTIVITY</string>
    <string name="tap_screen_to_talk">Swipe up to ask questions</string>
    <string name="long_press_to_repeat_response">Long press screen to repeat response</string>
    <string name="long_press_to_cancel">Long press to cancel</string>
    <string name="talk_prompt">Talk</string>
    <string name="type_prompt">Start typing</string>
    <string name="what_can_i_ask">What can I ask</string>
    <string name="please_wait">Please wait</string>
    <string name="error">Error</string>
    <string name="something_went_wrong">Sorry something went wrong. Please try again later</string>
    <string name="error_downloading_image">Error downloading image</string>
    <string name="no_internet">You do not have an internet connection</string>
    <string name="no_items_to_displayay">No items to display</string>
    <string name="you_did_not_enter_search">You did not enter any search query</string>
    <string name="no_search_results">No search results found</string>
    <string name="no_content_found">No content found</string>
    <string name="no_educator_content_found">No content found that has been created by you. Please reach out to hasijaadarsh@gmail.com to add education content</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_user_found">No User Found</string>
    <string name="login_signup_access_questions">You need to login or signup to do the questions</string>
    <string name="starting_signup_please_wait">Starting signup please wait</string>
    <string name="signup_failed">Signup failed: </string>
    <string name="prompt_connect_keyboard">Connect a keyboard to start</string>
    <string name="keyboard_removed">Keyboard has been removed</string>
    <string name="press_any_key">Connect a usb keyboard and press any key to know if your keyboard works with this app.</string>
    <string name="keypad_reading_mode_enabled">Keypad reading mode is now enabled</string>
    <string name="keypad_reading_mode_already_enabled">Keypad reading mode is already enabled</string>
    <string name="continue_to_login_screen">Continue to login screen</string>
    <string name="main_menu">Main Menu</string>
    <string name="se_assistant">StarsEarth Teacher</string>
    <string name="se_assistant_tap_here_to_begin">Tap here to begin</string>
    <string name="se_assistant_tap_here_to_continue">Tap here to continue</string>
    <string name="se_assistant_keyboard_test_completed">Keyboard test completed</string>
    <string name="complete">Complete</string>
    <string name="congratulations">Congratulations</string>
    <string name="course_complete">Course Complete</string>
    <string name="se_assistant_no_update">No Update</string>
    <string name="se_assistant_typing_games_welcome">You may now proceed to play any typing task from the main menu</string>
    <string name="se_assistant_welcome_message">I am the StarsEarth Teacher. I will help you use this app.\nTap screen to continue</string>
    <string name="se_assistant_keyboard_test_introduction">First we will test to see if your USB keyboard works with this app. It is helpful to have a USB keyboard when learning typing.\nTap screen to continue</string>
    <string name="se_assistant_keyboard_test_start">I will now show you the keyboard test. If you have a USB keyboard, connect it when the keyboard test opens. Press any key. If the keyboard recognizes the key, the keyboard works. If you do not have a USB keyboard, simply press back to exit the keyboard test screen.\nTap screen to open keyboard test</string>
    <string name="se_assistant_keyboard_test_end">The keyboard test was %s. You can open the keyboard test at any time by swiping right at the top of the main menu.\nTap screen to continue</string>
    <string name="view_all">View All</string>
    <string name="educator_search">Educator Search</string>
    <string name="educator_profile">Educator Profile</string>
    <string name="educator_search_hint">If you know someone who is an Educator on this app, enter their full name here</string>
    <string name="class_search_hint">You can search Class 1, Class 2, Class 3, Class 8 etc</string>
    <string name="covid19">Covid-19</string>
    <string name="fun">Fun</string>
    <string name="typing">Typing</string>
    <string name="english">English</string>
    <string name="mathematics">Mathematics</string>
    <string name="search_by_class">Search By Class</string>
    <string name="search_by_class_hint">Enter class. eg: Class 1</string>
    <string name="logout_successful">Logout Successful</string>
    <string name="corona_help_requests">Help Requests</string>
    <string name="corona_my_help_requests">My Help Requests</string>
    <string name="search_by_organization">Search By Organization</string>
    <string name="corona_make_new_help_request">Make New Help Request</string>
    <string name="karnataka">Karnataka</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_error">You have not entered an email address</string>
    <string name="password_error">You have not entered a password</string>
    <string name="login_started">Login started, please wait</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed </string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="saved">Saved</string>
    <string name="save_successful">Save Successful</string>
    <string name="admin">Admin</string>
    <string name="admin_description">You are now entering admin mode. Here you will be able to add, edit and delete data. Tap the button to continue</string>
    <string name="view_data">View data</string>
    <string name="courses">Courses</string>
    <string name="add_course">Add course</string>
    <string name="enter_edit_course_details">Enter/Edit Course Details</string>
    <string-array name="course_type">
        <item>Typing</item>
    </string-array>
    <string-array name="course_difficulty">
        <item>Basic</item>
        <item>Advanced</item>
    </string-array>
    <string name="course_description">Course description</string>
    <string name="course_description_blank">You need to provide a course description</string>
    <string name="course_details">Course Details</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="lessons">Lessons</string>
    <string name="delete_course_confirm_message">Are you sure you want to delete this course? All related information will also be deleted</string>
    <string name="enter_edit_lesson_details">Enter/Edit Lesson Details</string>
    <string name="lesson_number">Lesson Number</string>
    <string name="lesson_title">Lesson title</string>
    <string name="lesson_name_blank">You need to provide a lesson name</string>
    <string name="lesson_details">Lesson Details</string>
    <string name="edit_lesson">Edit Lesson</string>
    <string name="delete_lesson">Delete Lesson</string>
    <string name="add_topic">Add Topic</string>
    <string name="topics">Topics</string>
    <string name="delete_lesson_confirm_message">Are you sure you want to delete this lesson? All related information will also be deleted</string>
    <string name="enter_edit_topic_details">Enter/Edit Topic Details</string>
    <string name="topic_name">Topic name</string>
    <string name="topic_description">Topic description</string>
    <string name="topic_title_blank">You need to provide a topic title</string>
    <string name="topic_description_blank">You need to provide a topic description</string>
    <string name="topic_details">Topic Details</string>
    <string name="edit_topic">Edit Topic</string>
    <string name="delete_topic">Delete Topic</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="exercises">EXERCISES</string>
    <string name="delete_topic_confirm_message">Are you sure you want to delete this topic? All related information will also be deleted</string>
    <string name="enter_edit_exercise_details">Enter/Edit Exercise Details</string>
    <string name="exercise_title">Exercise title</string>
    <string name="exercise_description">Exercise description</string>
    <string name="exercise_title_blank">You need to provide an exercise title</string>
    <string name="exercise_description_blank">You need to provide an exercise description</string>
    <string name="exercise_details">Exercise Details</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="add_question">Add Question</string>
    <string name="questions">QUESTIONS</string>
    <string name="delete_exercise_confirm_message">Are you sure you want to delete this exercise? All related information will also be deleted</string>
    <string name="delete_question">Delete Question</string>
    <string name="delete_question_confirm_message">Are you sure you want to delete this question?</string>
    <string name="enter_edit_question_details">Enter/Edit Question Details</string>
    <string name="question">Question</string>
    <string name="question_instruction">Instruction</string>
    <string name="question_repeats">Repeats</string>
    <string name="question_positive_weight">Positive weight</string>
    <string name="question_negative_weight">Negative weight</string>
    <string name="question_feedback_correct_answer">Feedback for correct answer</string>
    <string name="question_feedback_wrong_answer">Feedback for wrong answer</string>
    <string name="keyboard_test">Keyboard Test</string>
    <string name="i_have_account">I have an account</string>
    <string name="i_do_not_have_account">I do not have an account</string>
    <string name="sign_up_or_guest">You can sign up for continue as a guest</string>
    <string name="guest_account_info">If you continue as a guest, you must signup later to save your data</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="usb_keyboard">You need to connect a USB keyboard to the phone to use this app</string>
    <string name="only_india_numbers">Only India mobile numbers are accepted at the moment</string>
    <string name="enter_number_here">Enter number here</string>
    <string name="otp_will_be_sent">A One Time Passcode will be sent to this number</string>
    <string name="send_otp">Send OTP</string>
    <string name="did_not_receive_otp">Did not receive OTP?</string>
    <string name="send_again">Send Again</string>
</resources>