<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.starsearth.one.activity.auth.AddEditPhoneNumberActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_india_numbers" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_number_here"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_will_be_sent" />

    <Button
        android:id="@+id/btn_send_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008000"
        android:textColor="#FFFFFF"
        android:text="@string/send_otp" />

</LinearLayout>
