<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    tools:context="com.starsearth.one.activity.welcome.WelcomeOneActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_computer" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"/>
    <TextView
        android:id="@+id/tv_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/app_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/usb_keyboard"
        android:layout_below="@id/tv_one"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_no_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/i_do_not_have_account"
        android:focusable="true"
        android:background="#FF0000"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_no_account"
        android:text="@string/i_have_account"
        android:focusable="true"
        android:background="#008000"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_keyboard_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_account"
        android:text="@string/keyboard_test"
        android:focusable="true"
        android:background="#000000"
        android:textColor="#FFFFFF" />

</RelativeLayout>
