<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_lesson"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.starsearth.one.activity.forms.AddEditCourseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:focusable="true"
        android:text="@string/course_type" />
    <Spinner
        android:id="@+id/spinner_course_type"
        android:background="#D3D3D3"
        android:layout_width="match_parent"
        android:focusable="true"
        android:layout_height="50dp" >
        <requestFocus />
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:focusable="true"
        android:text="@string/course_difficulty"/>
    <Spinner
        android:id="@+id/spinner_course_difficulty"
        android:background="#D3D3D3"
        android:layout_width="match_parent"
        android:focusable="true"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/et_course_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:hint="@string/course_description" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="#FFFFFF"
        android:focusable="true"
        android:background="#000000" />

</LinearLayout>
