<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.starsearth.one.activity.MainTalkActivity"
    tools:showIn="@layout/activity_main_talk">

    <LinearLayout
        android:id="@+id/llMainAction"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvMainAction"
            android:text="@string/swipe_left_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/btnMainAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap_here_to_start_activity"
            android:textColor="#FFFFFF"
            android:background="#000000" />

    </LinearLayout>



    <TextView
        android:id="@+id/tvUserInput"
        android:text="@string/tap_screen_to_talk"
        android:visibility="gone"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/llMainAction"
        android:layout_marginTop="40dp" />


    <LinearLayout
        android:id="@+id/llTypingView"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnQuickReplies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:textColor="#FFFFFF"
            android:text="@string/what_can_i_ask" />

        <com.starsearth.one.ExtendedEditText
            android:id="@+id/etUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_prompt"
            android:inputType="text" />

        <Button
            android:id="@+id/btnTextSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:textColor="#FFFFFF"
            android:text="@string/submit" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvBotResponse"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvUserInput"/>

    <TextView
        android:id="@+id/tvAdditionalInstructions"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvBotResponse" />

</RelativeLayout>
